# astrodb_utils

./: .gitignore  .pylintrc  CITATION.md  CLAUDE.md  README.md  astrodb-template-tests  pyproject.toml  readthedocs.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: joss-pdf.yml  pythonpublish.yml  run_tests.yml  scheduled_tests.yml
astrodb_scripts/: photometry.py  utils.py
astrodb_utils/: __init__.py  coordinates.py  fits.py  instruments.py  loaders.py  photometry.py  publications.py  sources.py  spectra.py  utils.py
astrodb_utils/tests/: astrodb-template-db  conftest.py  test_fits.py  test_photometry.py  test_publications.py  test_sources.py  test_spectra.py  test_utils.py
docs/: conf.py  doc_requirements.txt  fits_header_examples.ipynb  index.rst
docs/pages/: api.rst  developer_installation.rst  ingesting_publications.rst  installation.rst  modifying_schema.rst  organization.rst
docs/pages/converting_spectra/: converting_spectra.rst  fits_header_modify.ipynb  fits_header_scratch.ipynb
docs/pages/db_management/: agent_skills.rst  index.rst
docs/pages/dev_docs/: developer_installation.rst  documentation.rst  ingest_functions.rst
docs/pages/getting_started/: index.rst
docs/pages/ingesting/: getting_started_ingesting.rst  ingest_scripts.rst  ingesting_publications.rst
docs/pages/loading/: index.rst
docs/pages/make_new_db/: getting_started_new_database.rst  modifying_schema.rst
docs/pages/modifying/: index.rst  new_columns.rst
docs/pages/querying_existing_db/: querying.rst
docs/pages/reference/: documentation.rst
docs/pages/template_schema/: photometry.rst  (+6 more)
paper2026/: paper.bib  paper.md
src/astrodb_scripts/: photometry.py  utils.py
tests/: conftest.py  test_1_create_db.py  test_instruments.py  test_loaders.py  test_photometry.py  test_publications.py  test_sources.py  test_spectra.py  test_utils.py  test_xcreate_db.py
(+26 files in other folders)
