[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "astrodb-scripts"

authors = [
    {name = "Arjun Savel", email = "asavel@umd.edu"},
    {name= "Kelle Cruz"},
    {name= "David Rodriguez"}
]
description = "astrodb_scripts: scripts for interacting with the astrodb database"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["databases", "astronomy"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "astroquery",
    "astropy",
    "AstrodbKit2@git+https://github.com/dr-rodriguez/AstrodbKit2",
    "pandas",
    "sqlalchemy==2.0.3",
    "tqdm==4.64.1",
    "ads",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
