[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrodb_scripts"

authors = [
    {name = "Arjun Savel", email = "asavel@umd.edu"},
    {name= "Kelle Cruz"},
    {name= "David Rodriguez"}
]
description = "astrodb_scripts: scripts for interacting with the astrodb database"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["databases", "astronomy"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<2.0",
    "astroquery",
    "astropy",
    "astrodbkit2",
    "pandas",
    "sqlalchemy==2.0.3",
    "tqdm",
    "ads",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/astrodbtoolkit/astrodb_scripts"
Issues = "https://github.com/astrodbtoolkit/astrodb_scripts/issues"
Documentation = "https://astrodb-scripts.readthedocs.io/en/latest/"

[tool.hatch.metadata]
allow-direct-references = true